# practica2

./: .gitignore  diagrama setup practica.psd  instrucciones correr programa.txt
Flex-SDK-main/: CHANGELOG.md  README.md  embed_image.py  flex-crossfile.ini  meson.build  meson.build.testnumber1  meson_options.txt  schc_temp_sensor.c  send_img_test.c  temp_sensor.c  test.py  testmigrarprofe.c
Flex-SDK-main/examples/: README.md  meson.build
Flex-SDK-main/examples/analog/: main.c
Flex-SDK-main/examples/battery/: README.md  main.c
Flex-SDK-main/examples/configuration/: README.md  main.c
Flex-SDK-main/examples/event/: main.c
Flex-SDK-main/examples/i2c_bme280/: README.md  main.c
Flex-SDK-main/examples/modbus/: main.c
Flex-SDK-main/examples/pulse_counter/: main.c
Flex-SDK-main/examples/rs485_rs232/: main.c
Flex-SDK-main/lib/modbus/include/myriota/: modbus.h
Flex-SDK-main/scripts/: buildkey.py  download_binaries.py
Flex-SDK-main/subprojects/libflex/: meson.build  meson_options.txt
Flex-SDK-main/subprojects/libflex/config/: flex_options.c.in
Flex-SDK-main/subprojects/libflex/include/: flex.h  flex_diag_conf.h
SCHC_Gateway.cpp-main/: CMakeLists.txt  README.md
SCHC_Gateway.cpp-main/config/: config.ini
SCHC_Gateway.cpp-main/include/: SCHC_GW_Ack_on_error.hpp  SCHC_GW_Fragmenter.hpp  SCHC_GW_Macros.hpp  SCHC_GW_Message.hpp  SCHC_GW_Session.hpp  SCHC_GW_Stack_L2.hpp  SCHC_GW_State_Machine.hpp  SCHC_GW_TTN_MQTT_Stack.hpp  SCHC_GW_TTN_Parser.hpp  SCHC_GW_ThreadSafeQueue.hpp
SCHC_Gateway.cpp-main/src/: SCHC_GW_Ack_on_error.cpp  SCHC_GW_Fragmenter.cpp  SCHC_GW_Message.cpp  SCHC_GW_Session.cpp  SCHC_GW_State_Machine.cpp  SCHC_GW_TTN_MQTT_Stack.cpp  SCHC_GW_TTN_Parser.cpp  SCHC_GW_ThreadSafeQueue.cpp  main.cpp
received_data/: data_20250714_185312_738725.json  data_20250714_212455_622561.json
webserver/: defrag.py
webserver/SCHC_reciever/: fragmentos.txt  schc_temp_sensor.c  simpleschc.c
webserver/flasksv/: README.md  app.py  app_simplified.py
webserver/flasksv/sensor_data/flex_5e92a51c/sensor_generic/: data_20250721_155320_493244.json  data_20250721_155324_030577.json  data_20250721_155324_512076.json  data_20250721_155324_599074.json  data_20250721_155330_564337.json  data_20250722_153707_663316.json  data_20250722_153709_078795.json  data_20250722_153709_524542.json  (+64 more)
webserver/flasksv/templates/: dashboard_simple.html  sensor_data.html  sensor_data_simple.html
webserver/imgtest/: compression.py  requirements.txt  waterdamtest.py
