option('examples', type : 'boolean', value : 'true', description : 'Compiles flex-sdk examples')
option('skip_gnss', type : 'boolean', value : false,
        description: 'Disable GNSS sync task and use default location',
        yield: true
)
option('disable_ble_adv', type : 'boolean', value : false,
        description: 'Disable BLE advertising when running this user application',
        yield: true
)
option('cold_start', type : 'boolean', value : false,
        description: 'Build the merge applications binary with cold start network information',
        yield: true
)
